manifests/matterircd-0.1.7.tgz-manifest.yaml
---
# Source: matterircd/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-matterircd
  labels:
    helm.sh/chart: matterircd-0.1.7
    app: my-release
    app.kubernetes.io/name: matterircd
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.23.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 6697
      targetPort: 6697
      nodePort: 
      protocol: TCP
      name: ircs
  selector:
    app.kubernetes.io/name: matterircd
    app.kubernetes.io/instance: my-release
---
# Source: matterircd/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-matterircd
  labels:
    helm.sh/chart: matterircd-0.1.7
    app: my-release
    app.kubernetes.io/name: matterircd
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.23.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: matterircd
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        helm.sh/chart: matterircd-0.1.7
        app: my-release
        app.kubernetes.io/name: matterircd
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/version: "0.23.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: my-release-matterircd
      securityContext:
        {}
      containers:
        - name: matterircd
          securityContext:
            {}
          image: "42wim/matterircd:latest"
          imagePullPolicy: Always
          ports:
            - name: irc
              containerPort: 6667
              protocol: TCP
            - name: ircs
              containerPort: 6697
              protocol: TCP
          command:
            - /bin/matterircd
          args:
            - --conf
            - /etc/matterircd/matterircd.toml
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 20Mi
          volumeMounts:
            - mountPath: /etc/matterircd
              name: config-volume
            - mountPath: /etc/ssl/private
              name: ssl-private
      volumes:
        - name: ssl-private
          emptyDir: {}
        - name: config-volume
          configMap:
            name: my-release-matterircd.toml
        - name: tls-certificate-volume
          secret:
            secretName: irc-kix-co-il-tls
---
# Source: matterircd/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-matterircd
  labels:
    helm.sh/chart: matterircd-0.1.7
    app: my-release
    app.kubernetes.io/name: matterircd
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.23.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/permanent-redirect: https://kix.co.il
spec:
  tls:
    - hosts:
        - "irc.kix.co.il"
        - "irc.nix.co.il"
        - "irc.binaryvision.co.il"
        - "irc.binaryvision.org.il"
      secretName: irc-kix-co-il-tls
  rules:
    - host: "irc.kix.co.il"
      http:
        paths:
          - path: /
            backend:
              service:
                name: my-release-matterircd
                port:
                  number: 6667
            pathType: Prefix
---
# Source: matterircd/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "my-release-matterircd-test-connection"
  labels:
    helm.sh/chart: matterircd-0.1.7
    app: my-release
    app.kubernetes.io/name: matterircd
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.23.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['my-release-matterircd:']
  restartPolicy: Never
